<resources>
    <string name="app_name" translatable="false">HealthOwl</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>

    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_activity_appointment_tabs">AppointmentTabs</string>
    <string name="action_settings">Settings</string>

    <string name="err_msg_fname">Enter your first name</string>
    <string name="err_msg_lname">Enter valid last name</string>
    <string name="err_msg_ohip">Enter the insurance number</string>
    <string name="err_msg_phone">Enter valid phone number</string>
    <string name="err_msg_address">Enter the address</string>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="view">View</string>

    <string name="log_out">Log Out</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone No</string>
    <string name="insurance">Insurance</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="emergency">Emergency ?</string>
    <string name="level_of_pain">Level of Pain</string>
    <string name="enter_area_of_pain">Enter Area of Pain</string>
    <string name="department">Department</string>
    <string name="cardiology">Cardiology</string>
    <string name="dermatology">Dermatology</string>
    <string name="infectious">Infectious</string>
    <string name="physician">Physician</string>
    <string name="doctor_s_recommendation">Doctor\'s Recommendation</string>
    <string name="enter_diagonosis_detail_for_a_patient">Enter Diagonosis detail for a patient.
    </string>
    <string name="add_new_appointment">Add new Appointment</string>
    <string name="save">Save</string>
    <string name="reason_for_a_visit">Reason for a visit</string>
    <string name="enter_reason_for_a_visit">Enter Reason for a visit</string>
    <string name="temperature">Temperature</string>
    <string name="in_fahrenheit">In Fahrenheit</string>
    <string name="heartbeatrate">HeartbeatRate</string>
    <string name="in_bpm">In BPM</string>
    <string name="bloodpressure">BloodPressure</string>
    <string name="in_mmhg">In mmHg</string>
    <string name="physicianField">Physician</string>
    <string name="infectiousF">Infectious</string>
    <string name="dermatologyF">Dermatology</string>
    <string name="cardiologyF">Cardiology</string>
    <string name="departmentF">Department</string>
    <string name="enter_area_of_painF">Enter Area of Pain</string>
    <string name="area_of_painF">Area of Pain</string>
    <string name="level_of_painF">Level of Pain</string>
    <string name="emergencyF">Emergency ?</string>
    <string name="doctor_s_recommendationF">Doctor\'s Recommendation</string>
    <string name="groups">Groups</string>
    <string name="appointments">Appointments</string>
    <string name="patients">Patients</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="abbreviation">Abbreviation:</string>
    <string name="group_abbreviation">Group abbreviation</string>
    <string name="saveG">Save</string>
    <string name="go_to_all_patients">Go to all patients</string>
    <string name="do_you_want_to_add_a_new_appointment">Do you want to add a new appointment?
    </string>
    <string name="completed_successfully">Completed Successfully!</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_insurance_number">Enter Insurance Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="proceed">Proceed</string>
    <string name="is_connected">is connected?</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="twitter">Twitter</string>
    <string name="post">POST</string>
    <string name="enter_any_description_needed">Enter any description needed.</string>
    <string name="any_comments">Any Comments</string>
    <string name="dr_nurse_name">Dr/Nurse name</string>
    <string name="with">With</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">select date</string>
    <string name="select_dateC">SELECT DATE</string>
    <string name="enter_ohip">Enter OHIP</string>
    <string name="insurance_no">Insurance No</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="patient">Patient</string>
    <string name="enter_reason_for_a_visitG">Enter Reason for a visit</string>
    <string name="reason_for_a_visitG">Reason for a visit</string>
    <string name="addNewPatient2">Add New Patient (2/2)</string>
    <string name="fname">fName</string>
    <string name="lname">lName</string>
    <string name="phone">phone</string>
    <string name="addressv">address</string>
    <string name="ohipv">ohip</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="link">https://m2y-healthowl.herokuapp.com/patients</string>
    <string name="addNewPatient">Add New Patient</string>
    <string name="Grouptitle">Groups</string>
    <string name="group">group</string>
    <string name="group1">Cardiology</string>
    <string name="group2">ENT</string>
    <string name="group3">Neurology</string>
    <string name="group4">Oncology</string>
    <string name="group5">Nutrition and dietetics</string>
    <string name="group6">Hepatitis</string>
    <string name="group7">Cancer</string>
    <string name="testGroupTitle">Cardiology</string>
    <string name="titleNewGroup">Add New Group</string>
    <string name="switchOn">Switch is ON</string>
    <string name="switchOff">Switch is OFF</string>
    <string name="apptTitle">Appointments</string>
    <string name="switchO">Switch is ON</string>
    <string name="switchOf">Switch is OFF</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="bloor_pressure">Bloor Pressure</string>
    <string name="area_of_pain">Area of pain</string>
    <string name="department1">Department</string>
    <string name="reason_for_visit">Reason for visit</string>
    <string name="tempreture">Tempreture</string>
</resources>
