<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_forward_white_24dp"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_appointments"
        android:enabled="true"
        android:icon="@drawable/ic_assignment_white_24dp"
        android:title="@string/appointments"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_patients"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/patients"
        app:showAsAction="ifRoom" />



</menu>