
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="m2y.centennial.healthowl.appointment.Emergency" android:layout_height="match_parent"
    android:layout_width="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Emergency"-->
        <!--android:textSize="40dp"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_centerInParent="true"/>-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLayout">


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center" tools:ignore="UselessParent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="2dp"
            >

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/emergencyF" />

                <Switch
                    android:id="@+id/switchButton1"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:textColorLink="@android:color/holo_red_light"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:padding="20dp">

                <TextView
                    android:text="@string/level_of_painF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textLevelOfPain" />

                <SeekBar
                    style="@android:style/Widget.SeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progress="3"
                    android:id="@+id/levelOfPain" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:padding="20dp">

                <TextView
                    android:text="@string/area_of_painF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editAreaOfPain"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:hint="@string/enter_area_of_painF"
                    android:textColorLink="@android:color/holo_red_light"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:padding="2dp">

                <TextView
                    android:text="@string/departmentF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" />

                <RadioGroup
                    android:id="@+id/radiodepartments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radioCardiology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardiologyF"
                        android:checked="true"
                        android:textColorLink="@android:color/holo_red_light"/>

                    <RadioButton
                        android:id="@+id/radioDermatology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dermatologyF"
                        android:textColorLink="@android:color/holo_red_light"/>

                    <RadioButton
                        android:id="@+id/radioInfectious"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infectiousF"
                        android:textColorLink="@android:color/holo_red_light"/>

                    <RadioButton
                        android:id="@+id/radioPhysician"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/physicianField"
                        android:textColorLink="@android:color/holo_red_light"/>

                </RadioGroup>


            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>
