<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="m2y.centennial.healthowl.Login">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/health_owl"
        android:id="@+id/imageView5"
        android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"/>
    <Button
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/signInButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginBottom="19dp"
        android:id="@+id/login_editText"
        android:hint="@string/login"
        android:layout_above="@+id/password_editText"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginBottom="40dp"
        android:id="@+id/password_editText"
        android:hint="@string/password"
        android:layout_above="@+id/signInButton"
        android:layout_alignStart="@+id/login_editText"/>


</RelativeLayout>
