<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_add_patient_main3"
android:fitsSystemWindows="true"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="m2y.centennial.healthowl.patient.MainAddPatient3">

<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

</android.support.design.widget.AppBarLayout>

<LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="?attr/actionBarSize"
              android:orientation="vertical"
              android:paddingLeft="30dp"
              android:paddingRight="30dp"
              android:paddingTop="20dp"
              android:paddingBottom="20dp"
              android:background="?attr/colorButtonNormal">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingLeft="30dp"
                  android:paddingRight="30dp"
                  android:paddingTop="50dp"
                  android:background="@android:color/background_light" android:paddingBottom="50dp">

            <TextView
                android:text="@string/completed_successfully"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_success_view"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:gravity="center"
                android:textStyle="normal|bold"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingLeft="30dp"
                  android:paddingRight="30dp"
                  android:paddingTop="30dp"
                  android:background="@android:color/background_light"
                  android:layout_marginTop="30dp" android:paddingBottom="50dp">

        <TextView
            android:text="@string/do_you_want_to_add_a_new_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/next_action_view"
            android:layout_alignParentStart="true"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:gravity="center"
            android:textColor="?android:attr/textColorSecondary"/>


        <Button
            android:id="@+id/btnToAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_new_appointment"
            android:background="#fec54a"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnToPatients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/go_to_all_patients"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>






